<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/profileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/authorImageDescriptionPlaceholder"
                android:cropToPadding="false"
                android:foregroundTint="@color/primaryColor"
                android:maxWidth="128dp"
                android:minWidth="128dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_image_128"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingHorizontal="10dp"
                android:text="@string/profileNamePlaceholder"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileMetricsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/metrics"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileMetricsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/loremIpsumShort" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileBookmarksTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/bookmarks"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#616161" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/news_item" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>