<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:menu="@menu/toolbar_front_page">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profileToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_author_profile"
        app:subtitleTextColor="@color/white"
        app:title="@string/appName" />

    <ScrollView
        android:id="@+id/profileScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/profileLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@color/black"
                    android:contentDescription="@string/authorImageDescriptionPlaceholder"
                    android:cropToPadding="false"
                    android:maxWidth="128dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="14dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@string/profileNamePlaceholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/profileFollowers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@string/followerPlaceholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileAboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/about"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileAboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/loremIpsumShort" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileBookmarksTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/authorHistory"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/news_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_bottom_article">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>