<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/newsItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardMaxElevation="7dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/newsItemImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/articleImageDescriptionPlaceholder"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsItemHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:text="@string/articleHeaderPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsItemBrief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingHorizontal="15dp"
                android:paddingBottom="5dp"
                android:text="@string/loremIpsum" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>