<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:subtitleTextColor="@color/white"
        app:title="@string/appName" />

    <ScrollView
        android:id="@+id/newsArticleScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/newsArticleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsArticleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/articleHeaderPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/newsArticleImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/articleImageDescriptionPlaceholder"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/authorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingHorizontal="5dp"
                    android:text="@string/authorPlaceholder"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newsArticleBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:paddingBottom="5dp"
                android:text="@string/loremIpsum"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        app:labelVisibilityMode="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_bottom_article">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>